# gptj.cpp

./: .gitignore  CMakeLists-ggml.txt  CMakeLists.txt  README.md
.github/workflows/: build.yml
lib/avx2/: libgptj.dylib
src/: CMakeLists.txt  gptj.cpp
